Infrastructure/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v([A-Z0-9]+)/beststories
            pathType: Prefix
            backend:
              service:
                name: best-stories-service
                port:
                  number: 80
